Adam - made some UI changes